// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a more precise date 1`] = `
<Fragment>
  <div
    className="note spacer-top text-ellipsis"
    title="overview.period.previous_version_only_date"
  >
    overview.period.previous_version_only_date
  </div>
  <DateFromNow
    date={2018-08-16T22:00:00.000Z}
  >
    <Component />
  </DateFromNow>
</Fragment>
`;

exports[`should render correctly for "REFERENCE_BRANCH" 1`] = `
<div
  className="note spacer-top"
>
  overview.period.reference_branch.master
   
</div>
`;

exports[`should render correctly for "manual_baseline" 1`] = `
<Fragment>
  <div
    className="note spacer-top text-ellipsis"
    title="overview.period.manual_baseline.formattedTime.2019-04-23T02:12:32+0100"
  >
    overview.period.manual_baseline.formattedTime.2019-04-23T02:12:32+0100
  </div>
  <DateFromNow
    date={2019-04-23T01:12:32.000Z}
  >
    <Component />
  </DateFromNow>
</Fragment>
`;

exports[`should render correctly for "manual_baseline" 2`] = `
<Fragment>
  <div
    className="note spacer-top text-ellipsis"
    title="overview.period.manual_baseline.1.1.2"
  >
    overview.period.manual_baseline.1.1.2
  </div>
  <DateFromNow
    date={2019-04-23T01:12:32.000Z}
  >
    <Component />
  </DateFromNow>
</Fragment>
`;

exports[`should render correctly for "previous_analysis" 1`] = `
<Fragment>
  <div
    className="note spacer-top text-ellipsis"
    title="overview.period.previous_analysis."
  >
    overview.period.previous_analysis.
  </div>
  <DateFromNow
    date={2019-04-23T01:12:32.000Z}
  >
    <Component />
  </DateFromNow>
</Fragment>
`;

exports[`should render correctly for "previous_version" 1`] = `
<Fragment>
  <div
    className="note spacer-top text-ellipsis"
    title="overview.period.previous_version_only_date"
  >
    overview.period.previous_version_only_date
  </div>
  <DateFromNow
    date={2019-04-23T01:12:32.000Z}
  >
    <Component />
  </DateFromNow>
</Fragment>
`;

exports[`should render correctly for 10 days 1`] = `
<div
  className="note spacer-top"
>
  overview.period.days.10
   
</div>
`;

exports[`should render correctly for a specific date 1`] = `
<Fragment>
  <div
    className="note spacer-top text-ellipsis"
    title="overview.period.date.formatted.2013-01-01"
  >
    overview.period.date.formatted.2013-01-01
  </div>
  <DateFromNow
    date={2019-04-23T01:12:32.000Z}
  >
    <Component />
  </DateFromNow>
</Fragment>
`;

exports[`should render correctly for a specific version 1`] = `
<Fragment>
  <div
    className="note spacer-top text-ellipsis"
    title="overview.period.version.0.1"
  >
    overview.period.version.0.1
  </div>
  <DateFromNow
    date={2019-04-23T01:12:32.000Z}
  >
    <Component />
  </DateFromNow>
</Fragment>
`;
